// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should component receive props 1`] = `
<MockRouter
  client={
    Object {
      "delete": [Function],
      "get": [Function],
      "post": [Function],
      "put": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "match": Object {
            "params": Object {
              "page": 1,
              "search": undefined,
              "sort": undefined,
            },
          },
          "pathname": "/processes/1/10/title%3Aasc",
          "search": "?backPath=%2F",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "match": Object {
                "params": Object {
                  "page": 1,
                  "search": undefined,
                  "sort": undefined,
                },
              },
              "pathname": "/processes/1/10/title%3Aasc",
              "search": "?backPath=%2F",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "match": Object {
              "params": Object {
                "page": 1,
                "search": undefined,
                "sort": undefined,
              },
            },
            "pathname": "/processes/1/10/title%3Aasc",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <InstanceListCard
        page={1}
        pageSize={10}
        processId={12351}
      >
        <div
          className="container-fluid-1280 mt-4"
        >
          <ListView
            emptyActionButton={<ReloadButton />}
            emptyMessageText="There are no process items at the moment."
            errorMessageText={null}
            fetching={false}
            loading={true}
          >
            <div>
              <div
                className="border-1 pb-6 pt-6 sheet"
              >
                <LoadingState>
                  <span
                    aria-hidden="true"
                    className="loading-animation"
                  />
                </LoadingState>
              </div>
            </div>
          </ListView>
        </div>
      </InstanceListCard>
    </Router>
  </MemoryRouter>
</MockRouter>
`;

exports[`Should component shows empty state when items is undefined 1`] = `
<MockRouter
  client={
    Object {
      "delete": [Function],
      "get": [Function],
      "post": [Function],
      "put": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "match": Object {
            "params": Object {
              "page": 1,
              "search": undefined,
              "sort": undefined,
            },
          },
          "pathname": "/processes/1/10/title%3Aasc",
          "search": "?backPath=%2F",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "match": Object {
                "params": Object {
                  "page": 1,
                  "search": undefined,
                  "sort": undefined,
                },
              },
              "pathname": "/processes/1/10/title%3Aasc",
              "search": "?backPath=%2F",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "match": Object {
              "params": Object {
                "page": 1,
                "search": undefined,
                "sort": undefined,
              },
            },
            "pathname": "/processes/1/10/title%3Aasc",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <InstanceListCard>
        <div
          className="container-fluid-1280 mt-4"
        >
          <ListView
            emptyActionButton={<ReloadButton />}
            emptyMessageText="There are no process items at the moment."
            errorMessageText={null}
            fetching={false}
            loading={true}
          >
            <div>
              <div
                className="border-1 pb-6 pt-6 sheet"
              >
                <LoadingState>
                  <span
                    aria-hidden="true"
                    className="loading-animation"
                  />
                </LoadingState>
              </div>
            </div>
          </ListView>
        </div>
      </InstanceListCard>
    </Router>
  </MemoryRouter>
</MockRouter>
`;

exports[`Should render component 1`] = `
<MockRouter
  client={
    Object {
      "delete": [Function],
      "get": [Function],
      "post": [Function],
      "put": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "match": Object {
            "params": Object {
              "page": 1,
              "search": undefined,
              "sort": undefined,
            },
          },
          "pathname": "/processes/1/10/title%3Aasc",
          "search": "?backPath=%2F",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "match": Object {
                "params": Object {
                  "page": 1,
                  "search": undefined,
                  "sort": undefined,
                },
              },
              "pathname": "/processes/1/10/title%3Aasc",
              "search": "?backPath=%2F",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "match": Object {
              "params": Object {
                "page": 1,
                "search": undefined,
                "sort": undefined,
              },
            },
            "pathname": "/processes/1/10/title%3Aasc",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <InstanceListCard
        page={1}
        pageSize={10}
        processId={12351}
      >
        <div
          className="container-fluid-1280 mt-4"
        >
          <ListView
            emptyActionButton={<ReloadButton />}
            emptyMessageText="There are no process items at the moment."
            errorMessageText={null}
            fetching={false}
            loading={true}
          >
            <div>
              <div
                className="border-1 pb-6 pt-6 sheet"
              >
                <LoadingState>
                  <span
                    aria-hidden="true"
                    className="loading-animation"
                  />
                </LoadingState>
              </div>
            </div>
          </ListView>
        </div>
      </InstanceListCard>
    </Router>
  </MemoryRouter>
</MockRouter>
`;

exports[`Should render component with empty data 1`] = `
<div
  className="container-fluid-1280 mt-4"
>
  <div>
    <div
      className="border-1 pb-6 pt-6 sheet"
    >
      <span
        aria-hidden="true"
        className="loading-animation"
      />
    </div>
  </div>
</div>
`;

exports[`Should render component with error state 1`] = `
<div
  className="container-fluid-1280 mt-4"
>
  <div>
    <div
      className="border-1 pb-6 pt-6 sheet"
    >
      <span
        aria-hidden="true"
        className="loading-animation"
      />
    </div>
  </div>
</div>
`;
